# Agentic-Learning-Companion

./: .gitignore  main.py  pyproject.toml
backend/: app.py  config.py  llm_client.py  requirements.txt  reuirements.txt  vectorstore.py
backend/eval/: batch_eval.py  compare_retrievers.py  retrieval_eval.py
backend/models/: llm_client.py
backend/routers/: ask_router.py  debug_router.py  eval_router.py  health_router.py  ingest_router.py  mentor_router.py  quiz_router.py
backend/services/: bm25_search.py  chunker.py  embedding_engine.py  file_processing.py  loaders.py  rag_engine.py
backend/utils/: logger.py
backend/vectorstore/: chroma_client.py
streamlit_app/: app.py
vectorstore/db/: chroma.sqlite3
