[project]
name = "agentic-learning-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.4",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "whoosh>=2.7.4",
]
